force-app/main/default/objects/Integration_Log__c/fields/Record_Id_List__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_List__c</fullName>
    <label>Record Id List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>