force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Status__c</columns>
    <columns>End_Point__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>