force-app/main/default/objects/Integration_Log__c/listViews/Rootstock_Customer_Creation.listView-meta.xml
<ListView>
    <fullName>Rootstock_Customer_Creation</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Record_ID__c</columns>
    <columns>Response__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Rootstock Customer Creation</label>
</ListView>